# autoemailsmtp

./: README.md  SECURITY.md  pyproject.toml  template.example.j2
.github/: dependabot.yml
.github/workflows/: releases.yml  test.yml
autoemailsmtp/: config.py  send_mail.py
autoemailsmtp/notifiers/: discord.py
